# googletest

./: CMakeLists.txt  README.md  build.sh  run.sh
test/src/: sampelTest.cpp  test0.cpp
